--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>hello</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hello</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Hello-Java project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
